--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ streamlit==2.1.1
 neo4j==5.25.0
 google-cloud-aiplatform==1.70.0
 litellm==1.49.1
-typing-extensions==4.10.0
-dataclasses-json==0.6.7
-python-dotenv==1.0.1
-json5==0.9.14
+typing-extensions==4.9.0
+dataclasses-json==0.5.14
+python-dotenv==1.0.0
+protobuf==4.25.1
+grpcio==1.62.0
