--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,4 @@
-aiohttp==3.9.5
-neo4j==5.25.0
-google-cloud-aiplatform==1.70.0
-litellm==1.49.1
-streamlit==2.1.1
-typing-extensions==4.10.0
-dataclasses-json==0.6.7
-python-dotenv==1.0.1
-pydantic==2.8.2
-protobuf==4.25.5
-grpcio==1.66.2
+neo4j
+google-cloud-aiplatform
+litellm
+streamlit
